--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "obsidian-sample-plugin",
-  "version": "1.0.1",
-  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "name": "obsidian-list-callouts",
+  "version": "1.1.5",
+  "description": "Create simple callouts in lists.",
   "main": "main.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
-    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production"
+    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "check-types": "tsc --noemit",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src/**/* --fix",
+    "prettier": "prettier --write \"./src/**/*.{ts,tsx}\"",
+    "clean": "yarn prettier && yarn lint:fix",
+    "rlnotes": "git log $(git describe --tags --abbrev=0)..HEAD --oneline > release-notes.md && git add release-notes.md",
+    "bump": "node version-bump.mjs && git add package.json manifest.json versions.json && yarn rlnotes",
+    "release": "git commit -m $npm_package_version && git tag $npm_package_version && git push && git push --tags"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +21,7 @@
   "devDependencies": {
     "@codemirror/state": "^6.0.0",
     "@codemirror/view": "^6.0.0",
+    "@trivago/prettier-plugin-sort-imports": "4.2.0",
     "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
@@ -20,6 +29,7 @@
     "esbuild": "0.13.12",
     "eslint": "^8.17.0",
     "obsidian": "^1.1.1",
+    "prettier": "^3.0.3",
     "tslib": "2.3.1",
     "typescript": "4.4.4"
   },
