--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "obsidian-list-callouts",
-  "version": "1.1.5",
+  "version": "1.2.0",
   "description": "Create simple callouts in lists.",
   "main": "main.js",
   "scripts": {
@@ -34,6 +34,7 @@
     "typescript": "4.4.4"
   },
   "dependencies": {
-    "escape-string-regexp": "^5.0.0"
+    "escape-string-regexp": "^5.0.0",
+    "fuse.js": "^6.6.2"
   }
 }
